Fix ratio shift of covers

--- a/src/app/home.css
+++ b/src/app/home.css
@@ -58,14 +58,12 @@ h1 {
 
 .book-cover {
   width: 120px;
+  height: 180px;
   flex-shrink: 0;
 }
 
 .book-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
+ /* No style here because it creates a ratio shift if we do */
 }
 
 .book-info {
